--- a/packages/string-template/package.json
+++ b/packages/string-template/package.json
@@ -1,3 +1,53 @@
 {
-  "private": true
+  "author": {
+    "name": "kthksgy",
+    "url": "https://github.com/kthksgy"
+  },
+  "description": "String Template",
+  "devDependencies": {
+    "@types/node": "^20.11.17",
+    "@vitest/coverage-v8": "^1.2.2",
+    "typescript": "^5.3.3",
+    "vite": "^5.1.1",
+    "vitest": "^1.2.2"
+  },
+  "exports": {
+    ".": {
+      "import": "./lib/index.js",
+      "require": "./lib/index.umd.cjs",
+      "types": "./lib/index.d.ts"
+    }
+  },
+  "files": [
+    "lib"
+  ],
+  "homepage": "https://github.com/kthksgy/packages-node/tree/main/packages/string-template",
+  "keywords": [
+    "call",
+    "communication",
+    "interface",
+    "local",
+    "lpc",
+    "procedure",
+    "remote",
+    "rpc"
+  ],
+  "license": "MIT",
+  "main": "./lib/index.umd.cjs",
+  "module": "./lib/index.js",
+  "name": "@kthksgy/string-template",
+  "repository": {
+    "directory": "packages/string-template",
+    "type": "git",
+    "url": "git+https://github.com/kthksgy/packages-node.git"
+  },
+  "scripts": {
+    "build": "vite build && tsc --emitDeclarationOnly --project tsconfig.build.json",
+    "clean": "rm -rf coverage && rm -rf lib",
+    "coverage": "vitest run --coverage",
+    "test": "vitest"
+  },
+  "type": "module",
+  "types": "./lib/index.d.ts",
+  "version": "0.0.0"
 }
