文字列テンプレートパッケージの情報を修正

--- a/packages/string-template/package.json
+++ b/packages/string-template/package.json
@@ -23,14 +23,8 @@
   ],
   "homepage": "https://github.com/kthksgy/packages-node/tree/main/packages/string-template",
   "keywords": [
-    "call",
-    "communication",
-    "interface",
-    "local",
-    "lpc",
-    "procedure",
-    "remote",
-    "rpc"
+    "string",
+    "template"
   ],
   "license": "MIT",
   "main": "./lib/index.umd.cjs",
