--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "private": true,
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "~7.1.1",
-    "@typescript-eslint/parser": "~7.1.1",
+    "@typescript-eslint/eslint-plugin": "~7.3.1",
+    "@typescript-eslint/parser": "~7.3.1",
     "confusing-browser-globals": "~1.0.11",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "~9.1.0",
     "eslint-import-resolver-typescript": "~3.6.1",
     "eslint-plugin-import": "~2.29.1",
     "prettier": "~3.2.5",
-    "typescript": "^5.4.2"
+    "typescript": "~5.3.3"
   },
   "scripts": {
     "lint": "./lint.sh"
