--- a/packages/utilities-browser/package.json
+++ b/packages/utilities-browser/package.json
@@ -29,6 +29,9 @@
   "main": "./lib/index.umd.cjs",
   "module": "./lib/index.js",
   "name": "@kthksgy/utilities-browser",
+  "peerDependencies": {
+    "@kthksgy/utilities": "^0.0.0"
+  },
   "repository": {
     "directory": "packages/utilities-browser",
     "type": "git",
