--- a/packages/utilities-node/package.json
+++ b/packages/utilities-node/package.json
@@ -31,7 +31,8 @@
   "module": "./lib/index.js",
   "name": "@kthksgy/utilities-node",
   "peerDependencies": {
-    "@kthksgy/utilities": "^0.0.1"
+    "@kthksgy/utilities": "^0.0.1",
+    "crypto": "*"
   },
   "repository": {
     "directory": "packages/utilities-node",
