--- a/packages/utilities-node/package.json
+++ b/packages/utilities-node/package.json
@@ -31,8 +31,7 @@
   "module": "./lib/index.js",
   "name": "@kthksgy/utilities-node",
   "peerDependencies": {
-    "@kthksgy/utilities": "^0.0.1",
-    "crypto": "*"
+    "@kthksgy/utilities": "^0.0.1"
   },
   "repository": {
     "directory": "packages/utilities-node",
@@ -47,5 +46,5 @@
   },
   "type": "module",
   "types": "./lib/index.d.ts",
-  "version": "0.0.2"
+  "version": "0.0.3"
 }
