`@kthksgy/utilities`系列のパッケージの依存関係の指定方法を修正
`^0.0.2`では`0.0.3`が許容されないため、`~0.0.2`に変更しました。

--- a/packages/utilities-browser/package.json
+++ b/packages/utilities-browser/package.json
@@ -30,7 +30,7 @@
   "module": "./lib/index.js",
   "name": "@kthksgy/utilities-browser",
   "peerDependencies": {
-    "@kthksgy/utilities": "^0.0.2"
+    "@kthksgy/utilities": "~0.0.2"
   },
   "repository": {
     "directory": "packages/utilities-browser",
@@ -45,5 +45,5 @@
   },
   "type": "module",
   "types": "./lib/index.d.ts",
-  "version": "0.0.2"
+  "version": "0.0.3"
 }
