テスト時に型の検証も行うように変更

--- a/packages/utilities-node/package.json
+++ b/packages/utilities-node/package.json
@@ -42,7 +42,7 @@
     "build": "vite build && tsc --emitDeclarationOnly --project tsconfig.build.json",
     "clean": "rm -rf coverage && rm -rf lib",
     "coverage": "vitest run --coverage",
-    "test": "vitest"
+    "test": "vitest --typecheck"
   },
   "type": "module",
   "types": "./lib/index.d.ts",
