--- a/packages/utilities-browser/package.json
+++ b/packages/utilities-browser/package.json
@@ -43,7 +43,7 @@
     "build": "vite build && tsc --emitDeclarationOnly --project tsconfig.build.json",
     "clean": "rm -rf coverage && rm -rf lib",
     "coverage": "vitest run --coverage",
-    "test": "vitest --browser.headless --browser.name=chrome"
+    "test": "vitest --browser.headless --browser.name=chrome --typecheck"
   },
   "type": "module",
   "types": "./lib/index.d.ts",
