--- a/packages/utilities-node/tsconfig.build.json
+++ b/packages/utilities-node/tsconfig.build.json
@@ -1,4 +1,4 @@
 {
-  "exclude": ["src/**/*.test.ts", "vite.config.ts"],
+  "exclude": ["**/*.test.ts", "**/*.test-d.ts", "vite.config.ts"],
   "extends": "./tsconfig.json"
 }
