--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "private": true,
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "~8.21.0",
-    "@typescript-eslint/parser": "~8.21.0",
+    "@eslint/js": "~9.18.0",
     "confusing-browser-globals": "~1.0.11",
-    "eslint": "~9.18.0",
     "eslint-config-prettier": "~10.0.1",
     "eslint-import-resolver-typescript": "~3.7.0",
-    "eslint-plugin-import": "~2.31.0",
+    "eslint-plugin-import-x": "~4.6.1",
+    "eslint-plugin-prettier": "~5.2.2",
+    "eslint-plugin-react": "~7.37.4",
+    "eslint-plugin-react-hooks": "~5.1.0",
+    "globals": "~15.14.0",
     "prettier": "~3.4.2",
-    "typescript": "~5.7.3"
+    "typescript": "~5.7.3",
+    "typescript-eslint": "^8.21.0"
   },
   "scripts": {
     "lint": "./lint.sh"
