パッケージを更新

--- a/packages/utilities-browser/tsconfig.json
+++ b/packages/utilities-browser/tsconfig.json
@@ -4,6 +4,7 @@
     "declaration": true,
     "declarationDir": "lib",
     "declarationMap": true,
+    "erasableSyntaxOnly": true,
     "isolatedModules": true,
     "lib": ["DOM", "DOM.Iterable", "ES2023"],
     "module": "ESNext",
