--- a/packages/utilities-node/tsconfig.json
+++ b/packages/utilities-node/tsconfig.json
@@ -4,6 +4,7 @@
     "declaration": true,
     "declarationDir": "lib",
     "declarationMap": true,
+    "erasableSyntaxOnly": true,
     "isolatedModules": true,
     "lib": ["ES2023"],
     "module": "ESNext",
