--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -29,6 +29,9 @@
   "main": "./lib/index.umd.cjs",
   "module": "./lib/index.js",
   "name": "@kthksgy/utilities",
+  "peerDependencies": {
+    "temporal-polyfill": "~0.2.5"
+  },
   "repository": {
     "directory": "packages/utilities",
     "type": "git",
