--- a/packages/firebase-common/package.json
+++ b/packages/firebase-common/package.json
@@ -3,18 +3,19 @@
     "name": "kthksgy",
     "url": "https://github.com/kthksgy"
   },
-  "description": "Firebase Common",
   "devDependencies": {
     "@vitest/coverage-v8": "^3.0.8",
+    "esbuild": "0.25.2",
     "typescript": "~5.8.2",
+    "valibot": "^1.0.0",
     "vite": "^6.2.1",
     "vitest": "^3.0.8"
   },
   "exports": {
-    ".": {
-      "import": "./lib/index.js",
-      "require": "./lib/index.umd.cjs",
-      "types": "./lib/index.d.ts"
+    "./firestore": {
+      "import": "./lib/firestore.js",
+      "require": "./lib/firestore.umd.cjs",
+      "types": "./lib/firestore/index.d.ts"
     }
   },
   "files": [
@@ -30,10 +31,11 @@
   "module": "./lib/index.js",
   "name": "@kthksgy/firebase-common",
   "peerDependencies": {
+    "@standard-schema/spec": "^1.0.0",
     "temporal-polyfill": "~0.3.0"
   },
   "repository": {
-    "directory": "packages/utilities",
+    "directory": "packages/firebase-common",
     "type": "git",
     "url": "git+https://github.com/kthksgy/packages-node.git"
   },
@@ -45,5 +47,5 @@
   },
   "type": "module",
   "types": "./lib/index.d.ts",
-  "version": "0.0.0"
+  "version": "0.0.0-alpha+0"
 }
