--- a/packages/firebase-common/tsconfig.json
+++ b/packages/firebase-common/tsconfig.json
@@ -6,21 +6,20 @@
     "declarationMap": true,
     "erasableSyntaxOnly": true,
     "isolatedModules": true,
-    "lib": ["ES2023"],
+    "lib": ["ES2024"],
     "module": "ESNext",
     "moduleResolution": "bundler",
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "resolveJsonModule": true,
-    "rootDir": "src",
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "target": "ES2022",
+    "target": "ES2024",
     "types": ["vitest/importMeta"],
     "useDefineForClassFields": true
   },
   "exclude": ["vite.config.ts"],
-  "include": ["src", "vite.config.ts"]
+  "include": ["source-code", "vite.config.ts"]
 }
