--- a/packages/firebase-common/package.json
+++ b/packages/firebase-common/package.json
@@ -12,6 +12,11 @@
     "vitest": "^3.0.8"
   },
   "exports": {
+    ".": {
+      "import": "./lib/index.js",
+      "require": "./lib/index.umd.cjs",
+      "types": "./lib/index.d.ts"
+    },
     "./firestore": {
       "import": "./lib/firestore.js",
       "require": "./lib/firestore.umd.cjs",
@@ -31,6 +36,7 @@
   "module": "./lib/index.js",
   "name": "@kthksgy/firebase-common",
   "peerDependencies": {
+    "@kthksgy/utilities": "~0.1.3",
     "@standard-schema/spec": "^1.0.0",
     "temporal-polyfill": "~0.3.0"
   },
