ユーザー環境のFirebaseのパッケージを諸々改善

--- a/packages/firebase-user/tsconfig.build.json
+++ b/packages/firebase-user/tsconfig.build.json
@@ -1,4 +1,4 @@
 {
-  "exclude": ["**/*.test.ts", "**/*.test-d.ts", "vite.config.ts"],
+  "exclude": ["scripts", "**/*.test.ts", "**/*.test-d.ts", "vite.config.ts"],
   "extends": "./tsconfig.json"
 }
