--- a/packages/firebase-user/tsconfig.json
+++ b/packages/firebase-user/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "declaration": true,
-    "declarationDir": "lib",
+    "declarationDir": "distributions/types",
     "declarationMap": true,
     "erasableSyntaxOnly": true,
     "isolatedModules": true,
