--- a/packages/firebase-user/package.json
+++ b/packages/firebase-user/package.json
@@ -8,32 +8,36 @@
     "esbuild": "0.25.2",
     "typescript": "~5.8.2",
     "valibot": "^1.0.0",
-    "vite": "^6.2.1",
     "vitest": "^3.0.8"
   },
   "exports": {
+    ".": {
+      "import": "./distributions/browser/index.js",
+      "require": "./distributions/node/index.cjs",
+      "types": "./distributions/types/index.d.ts"
+    },
     "./firestore": {
-      "import": "./lib/firestore.js",
-      "require": "./lib/firestore.umd.cjs",
-      "types": "./lib/firestore/index.d.ts"
+      "import": "./distributions/browser/firestore.js",
+      "require": "./distributions/node/firestore.cjs",
+      "types": "./distributions/types/firestore/index.d.ts"
     },
     "./storage": {
-      "import": "./lib/storage.js",
-      "require": "./lib/storage.umd.cjs",
-      "types": "./lib/storage/index.d.ts"
+      "import": "./distributions/browser/storage.js",
+      "require": "./distributions/node/storage.cjs",
+      "types": "./distributions/types/storage/index.d.ts"
     }
   },
   "files": [
-    "lib"
+    "distributions"
   ],
   "homepage": "https://github.com/kthksgy/packages-node/tree/main/packages/firebase-user",
   "license": "MIT",
-  "main": "./lib/index.umd.cjs",
-  "module": "./lib/index.js",
   "name": "@kthksgy/firebase-user",
   "peerDependencies": {
+    "@kthksgy/firebase-common": "^0.0.0",
     "@kthksgy/utilities": "~0.1.3",
     "@standard-schema/spec": "^1.0.0",
+    "firebase": "^11.6.0",
     "temporal-polyfill": "~0.3.0"
   },
   "repository": {
@@ -42,13 +46,11 @@
     "url": "git+https://github.com/kthksgy/packages-node.git"
   },
   "scripts": {
-    "build2": "node --experimental-strip-types scripts/build.ts",
-    "build": "vite build && tsc --emitDeclarationOnly --project tsconfig.build.json",
+    "build": "node --experimental-strip-types scripts/build.ts --clean && tsc --emitDeclarationOnly --project tsconfig.build.json",
     "clean": "rm -rf coverage && rm -rf lib",
     "coverage": "vitest run --coverage",
     "test": "vitest --typecheck"
   },
   "type": "module",
-  "types": "./lib/index.d.ts",
-  "version": "0.0.0"
+  "version": "0.0.0-alpha+0"
 }
