--- a/packages/firebase-user/package.json
+++ b/packages/firebase-user/package.json
@@ -5,6 +5,7 @@
   },
   "devDependencies": {
     "@vitest/coverage-v8": "^3.0.8",
+    "commander": "^13.1.0",
     "esbuild": "0.25.2",
     "typescript": "~5.8.2",
     "valibot": "^1.0.0",
