--- a/packages/firebase-user/tsconfig.json
+++ b/packages/firebase-user/tsconfig.json
@@ -1,18 +1,18 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
+    "allowImportingTsExtensions": true,
+    "allowSyntheticDefaultImports": false,
     "declaration": true,
     "declarationDir": "distributions/types",
     "declarationMap": true,
+    "emitDeclarationOnly": true,
     "erasableSyntaxOnly": true,
     "isolatedModules": true,
-    "lib": ["ES2024"],
     "module": "ESNext",
     "moduleResolution": "bundler",
+    "noFallthroughCasesInSwitch": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-    "resolveJsonModule": true,
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
