--- a/packages/firebase-administrator/package.json
+++ b/packages/firebase-administrator/package.json
@@ -35,6 +35,7 @@
   "license": "MIT",
   "name": "@kthksgy/firebase-administrator",
   "peerDependencies": {
+    "@google-cloud/storage": "^7.16.0",
     "@kthksgy/firebase-common": "^0.0.0",
     "@kthksgy/utilities": "~0.1.3",
     "@standard-schema/spec": "^1.0.0",
@@ -53,5 +54,5 @@
     "test": "vitest --typecheck"
   },
   "type": "module",
-  "version": "0.0.1"
+  "version": "0.0.0-alpha+0"
 }
