--- a/packages/firebase-common/package.json
+++ b/packages/firebase-common/package.json
@@ -5,26 +5,26 @@
   },
   "devDependencies": {
     "@vitest/coverage-v8": "^3.0.8",
+    "commander": "^13.1.0",
     "esbuild": "0.25.2",
     "typescript": "~5.8.2",
     "valibot": "^1.0.0",
-    "vite": "^6.2.1",
     "vitest": "^3.0.8"
   },
   "exports": {
     ".": {
-      "import": "./lib/index.js",
-      "require": "./lib/index.umd.cjs",
-      "types": "./lib/index.d.ts"
+      "import": "./distributions/browser/index.js",
+      "require": "./distributions/node/index.cjs",
+      "types": "./distributions/types/index.d.ts"
     },
     "./firestore": {
-      "import": "./lib/firestore.js",
-      "require": "./lib/firestore.umd.cjs",
-      "types": "./lib/firestore/index.d.ts"
+      "import": "./distributions/browser/firestore.js",
+      "require": "./distributions/node/firestore.cjs",
+      "types": "./distributions/types/firestore/index.d.ts"
     }
   },
   "files": [
-    "lib"
+    "distributions"
   ],
   "homepage": "https://github.com/kthksgy/packages-node/tree/main/packages/firebase-common",
   "keywords": [
@@ -32,8 +32,6 @@
     "utils"
   ],
   "license": "MIT",
-  "main": "./lib/index.umd.cjs",
-  "module": "./lib/index.js",
   "name": "@kthksgy/firebase-common",
   "peerDependencies": {
     "@kthksgy/utilities": "~0.1.3",
@@ -46,12 +44,11 @@
     "url": "git+https://github.com/kthksgy/packages-node.git"
   },
   "scripts": {
-    "build": "vite build && tsc --emitDeclarationOnly --project tsconfig.build.json",
+    "build": "node --experimental-strip-types scripts/build.ts --clean && tsc --project tsconfig.build.json",
     "clean": "rm -rf coverage && rm -rf lib",
     "coverage": "vitest run --coverage",
     "test": "vitest --typecheck"
   },
   "type": "module",
-  "types": "./lib/index.d.ts",
-  "version": "0.0.1-alpha+0"
+  "version": "0.0.1-alpha+1"
 }
