--- a/packages/firebase-common/tsconfig.json
+++ b/packages/firebase-common/tsconfig.json
@@ -1,18 +1,18 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
+    "allowImportingTsExtensions": true,
+    "allowSyntheticDefaultImports": false,
     "declaration": true,
-    "declarationDir": "lib",
+    "declarationDir": "distributions/types",
     "declarationMap": true,
+    "emitDeclarationOnly": true,
     "erasableSyntaxOnly": true,
     "isolatedModules": true,
-    "lib": ["ES2024"],
     "module": "ESNext",
     "moduleResolution": "bundler",
+    "noFallthroughCasesInSwitch": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-    "resolveJsonModule": true,
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
@@ -20,6 +20,5 @@
     "types": ["vitest/importMeta"],
     "useDefineForClassFields": true
   },
-  "exclude": ["vite.config.ts"],
-  "include": ["source-code", "vite.config.ts"]
+  "include": ["scripts", "source-code"]
 }
