--- a/packages/firebase-user/package.json
+++ b/packages/firebase-user/package.json
@@ -22,20 +22,20 @@
       "require": "./distributions/node/firestore.cjs",
       "types": "./distributions/types/firestore/index.d.ts"
     },
-    "./native/firestore": {
+    "./firestore/native": {
       "import": "./distributions/browser/native/firestore.js",
       "require": "./distributions/node/native/firestore.cjs",
       "types": "./distributions/types/native/firestore.d.ts"
-    },
-    "./native/storage": {
-      "import": "./distributions/browser/native/storage.js",
-      "require": "./distributions/node/native/storage.cjs",
-      "types": "./distributions/types/native/storage.d.ts"
     },
     "./storage": {
       "import": "./distributions/browser/storage.js",
       "require": "./distributions/node/storage.cjs",
       "types": "./distributions/types/storage/index.d.ts"
+    },
+    "./storage/native": {
+      "import": "./distributions/browser/native/storage.js",
+      "require": "./distributions/node/native/storage.cjs",
+      "types": "./distributions/types/native/storage.d.ts"
     }
   },
   "files": [
@@ -63,5 +63,5 @@
     "test": "vitest --typecheck"
   },
   "type": "module",
-  "version": "0.0.2-alpha+1"
+  "version": "0.0.2-alpha+2"
 }
