--- a/packages/firebase-user/package.json
+++ b/packages/firebase-user/package.json
@@ -58,7 +58,7 @@
   },
   "scripts": {
     "build": "node --experimental-strip-types scripts/build.ts --clean && tsc --project tsconfig.build.json",
-    "clean": "rm -rf coverage && rm -rf lib",
+    "clean": "rm -rf coverage && rm -rf distributions",
     "coverage": "vitest run --coverage",
     "test": "vitest --typecheck"
   },
