--- a/packages/firebase-administrator/package.json
+++ b/packages/firebase-administrator/package.json
@@ -46,7 +46,7 @@
   "name": "@kthksgy/firebase-administrator",
   "peerDependencies": {
     "@google-cloud/storage": "^7.16.0",
-    "@kthksgy/firebase-common": "^0.0.2",
+    "@kthksgy/firebase-common": "^0.0.3",
     "@kthksgy/utilities": "~0.1.3",
     "@standard-schema/spec": "^1.0.0",
     "firebase-admin": "^13.2.0",
@@ -64,5 +64,5 @@
     "test": "vitest --typecheck"
   },
   "type": "module",
-  "version": "0.0.1"
+  "version": "0.0.2-alpha+0"
 }
