--- a/packages/firebase-user/package.json
+++ b/packages/firebase-user/package.json
@@ -45,7 +45,7 @@
   "license": "MIT",
   "name": "@kthksgy/firebase-user",
   "peerDependencies": {
-    "@kthksgy/firebase-common": "^0.0.2",
+    "@kthksgy/firebase-common": "^0.0.3",
     "@kthksgy/utilities": "~0.1.3",
     "@standard-schema/spec": "^1.0.0",
     "firebase": "^11.6.0",
@@ -63,5 +63,5 @@
     "test": "vitest --typecheck"
   },
   "type": "module",
-  "version": "0.0.2"
+  "version": "0.0.3-alpha+0"
 }
