--- a/packages/firebase-utilities/package.json
+++ b/packages/firebase-utilities/package.json
@@ -4,6 +4,7 @@
     "url": "https://github.com/kthksgy"
   },
   "devDependencies": {
+    "@kthksgy/firebase": "npm:@kthksgy/firebase-user@^0.0.4",
     "@vitest/coverage-v8": "^3.1.1",
     "commander": "^13.1.0",
     "esbuild": "0.25.2",
@@ -26,20 +27,21 @@
   "files": [
     "distributions"
   ],
-  "homepage": "https://github.com/kthksgy/packages-node/tree/main/packages/firebase-common",
+  "homepage": "https://github.com/kthksgy/packages-node/tree/main/packages/firebase-utilities",
   "keywords": [
     "utilities",
     "utils"
   ],
   "license": "MIT",
-  "name": "@kthksgy/firebase-common",
+  "name": "@kthksgy/firebase-utilities",
   "peerDependencies": {
+    "@kthksgy/firebase": "*",
     "@kthksgy/utilities": "~0.1.3",
     "@standard-schema/spec": "^1.0.0",
     "temporal-polyfill": "~0.3.0"
   },
   "repository": {
-    "directory": "packages/firebase-common",
+    "directory": "packages/firebase-utilities",
     "type": "git",
     "url": "git+https://github.com/kthksgy/packages-node.git"
   },
