--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -41,11 +41,11 @@
   },
   "scripts": {
     "build": "node --experimental-strip-types scripts/build.ts --clean && tsc --project tsconfig.build.json",
-    "clean": "rm -rf coverage && rm -rf lib",
+    "clean": "rm -rf coverage && rm -rf distributions",
     "coverage": "vitest run --coverage",
     "test": "vitest --typecheck"
   },
   "type": "module",
   "types": "./distributions/types/index.d.ts",
-  "version": "0.1.7-alpha+6"
+  "version": "0.1.7-alpha+7"
 }
