--- a/packages/firebase-administrator/package.json
+++ b/packages/firebase-administrator/package.json
@@ -47,7 +47,7 @@
   "peerDependencies": {
     "@google-cloud/storage": "^7.16.0",
     "@kthksgy/firebase-common": "^0.0.4",
-    "@kthksgy/utilities": "~0.1.3",
+    "@kthksgy/utilities": "^0.1.7",
     "@standard-schema/spec": "^1.0.0",
     "firebase-admin": "^13.2.0",
     "temporal-polyfill": "~0.3.0"
