--- a/packages/firebase-utilities/package.json
+++ b/packages/firebase-utilities/package.json
@@ -36,7 +36,7 @@
   "name": "@kthksgy/firebase-utilities",
   "peerDependencies": {
     "@kthksgy/firebase": "*",
-    "@kthksgy/utilities": "~0.1.3",
+    "@kthksgy/utilities": "^0.1.7",
     "@standard-schema/spec": "^1.0.0",
     "temporal-polyfill": "~0.3.0"
   },
