--- a/packages/utilities-node/package.json
+++ b/packages/utilities-node/package.json
@@ -33,7 +33,7 @@
   "module": "./distributions/browser/index.js",
   "name": "@kthksgy/utilities-node",
   "peerDependencies": {
-    "@kthksgy/utilities": "~0.1.3"
+    "@kthksgy/utilities": "^0.1.7"
   },
   "repository": {
     "directory": "packages/utilities-node",
