--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -8,6 +8,7 @@
     "@vitest/coverage-v8": "^3.1.1",
     "commander": "^13.1.0",
     "esbuild": "0.25.2",
+    "glob": "^11.0.1",
     "typescript": "~5.8.3",
     "valibot": "^1.0.0",
     "vitest": "^3.1.1"
@@ -15,7 +16,7 @@
   "exports": {
     ".": {
       "import": "./distributions/browser/index.js",
-      "require": "./distributions/node/index.js",
+      "require": "./distributions/node/index.cjs",
       "types": "./distributions/types/index.d.ts"
     }
   },
@@ -28,7 +29,7 @@
     "utils"
   ],
   "license": "MIT",
-  "main": "./distributions/node/index.js",
+  "main": "./distributions/node/index.cjs",
   "module": "./distributions/browser/index.js",
   "name": "@kthksgy/utilities",
   "peerDependencies": {
@@ -47,5 +48,5 @@
   },
   "type": "module",
   "types": "./distributions/types/index.d.ts",
-  "version": "0.1.10"
+  "version": "0.1.11-alpha+0"
 }
