--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -48,5 +48,5 @@
   },
   "type": "module",
   "types": "./distributions/types/index.d.ts",
-  "version": "0.1.12"
+  "version": "0.1.13-alpha+0"
 }
