--- a/packages/firebase-common/package.json
+++ b/packages/firebase-common/package.json
@@ -34,9 +34,10 @@
   "license": "MIT",
   "name": "@kthksgy/firebase-common",
   "peerDependencies": {
-    "@kthksgy/utilities": "^0.1.9",
+    "@kthksgy/utilities": "^0.1.13",
     "@standard-schema/spec": "^1.0.0",
-    "temporal-polyfill": "~0.3.0"
+    "temporal-polyfill": "~0.3.0",
+    "type-fest": "^4.40.0"
   },
   "repository": {
     "directory": "packages/firebase-common",
@@ -50,5 +51,5 @@
     "test": "vitest --typecheck"
   },
   "type": "module",
-  "version": "0.1.3"
+  "version": "0.1.4-alpha+0"
 }
