--- a/packages/react-utilities/package.json
+++ b/packages/react-utilities/package.json
@@ -5,6 +5,8 @@
   },
   "description": "Utilities",
   "devDependencies": {
+    "@types/react": "^18.3.20",
+    "@types/react-dom": "^18.3.6",
     "@vitest/coverage-v8": "^3.1.2",
     "commander": "^13.1.0",
     "esbuild": "0.25.2",
@@ -33,7 +35,9 @@
   "module": "./distributions/browser/index.js",
   "name": "@kthksgy/react-utilities",
   "peerDependencies": {
-    "temporal-polyfill": "~0.3.0"
+    "temporal-polyfill": "~0.3.0",
+    "react": ">=18.3.1",
+    "react-dom": ">=18.3.1"
   },
   "repository": {
     "directory": "packages/react-utilities",
