--- a/packages/react-utilities/package.json
+++ b/packages/react-utilities/package.json
@@ -35,9 +35,10 @@
   "module": "./distributions/browser/index.js",
   "name": "@kthksgy/react-utilities",
   "peerDependencies": {
-    "temporal-polyfill": "~0.3.0",
+    "@kthksgy/utilities": "^0.1.14",
     "react": ">=18.3.1",
-    "react-dom": ">=18.3.1"
+    "react-dom": ">=18.3.1",
+    "temporal-polyfill": "~0.3.0"
   },
   "repository": {
     "directory": "packages/react-utilities",
@@ -52,5 +53,5 @@
   },
   "type": "module",
   "types": "./distributions/types/index.d.ts",
-  "version": "0.1.0-alpha+0"
+  "version": "0.1.0-alpha+1"
 }
