--- a/packages/firebase-user/package.json
+++ b/packages/firebase-user/package.json
@@ -45,7 +45,7 @@
   "license": "MIT",
   "name": "@kthksgy/firebase-user",
   "peerDependencies": {
-    "@kthksgy/firebase-common": "^0.1.4",
+    "@kthksgy/firebase-common": "^0.1.5",
     "@kthksgy/utilities": "^0.1.15",
     "@standard-schema/spec": "^1.0.0",
     "firebase": "^11.6.0",
@@ -63,5 +63,5 @@
     "test": "vitest --typecheck"
   },
   "type": "module",
-  "version": "0.1.5"
+  "version": "0.1.6-alpha+0"
 }
