--- a/packages/firebase-utilities/package.json
+++ b/packages/firebase-utilities/package.json
@@ -4,7 +4,7 @@
     "url": "https://github.com/kthksgy"
   },
   "devDependencies": {
-    "@kthksgy/firebase": "npm:@kthksgy/firebase-user@^0.1.5",
+    "@kthksgy/firebase": "npm:@kthksgy/firebase-user@^0.1.6",
     "@vitest/coverage-v8": "^3.1.3",
     "commander": "^13.1.0",
     "esbuild": "0.25.4",
@@ -36,7 +36,7 @@
   "name": "@kthksgy/firebase-utilities",
   "peerDependencies": {
     "@kthksgy/firebase": "*",
-    "@kthksgy/utilities": "^0.1.13",
+    "@kthksgy/utilities": "^0.1.15",
     "@standard-schema/spec": "^1.0.0",
     "temporal-polyfill": "~0.3.0"
   },
@@ -52,5 +52,5 @@
     "test": "vitest --typecheck"
   },
   "type": "module",
-  "version": "0.1.4"
+  "version": "0.1.5-alpha+0"
 }
