--- a/packages/firebase-user/package.json
+++ b/packages/firebase-user/package.json
@@ -45,10 +45,10 @@
   "license": "MIT",
   "name": "@kthksgy/firebase-user",
   "peerDependencies": {
-    "@kthksgy/firebase-common": "^0.1.6",
+    "@kthksgy/firebase-common": "^0.1.7",
     "@kthksgy/utilities": "^0.1.15",
     "@standard-schema/spec": "^1.0.0",
-    "firebase": "^11.6.0",
+    "firebase": "^11.7.3",
     "temporal-polyfill": "~0.3.0"
   },
   "repository": {
@@ -63,5 +63,5 @@
     "test": "vitest --typecheck"
   },
   "type": "module",
-  "version": "0.1.6"
+  "version": "0.1.7-alpha+0"
 }
