--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -5,12 +5,12 @@
   },
   "description": "Utilities",
   "devDependencies": {
-    "@vitest/coverage-v8": "^3.1.3",
-    "commander": "^13.1.0",
-    "esbuild": "0.25.4",
-    "typescript": "~5.8.3",
+    "@vitest/coverage-v8": "^3.2.4",
+    "commander": "^14.0.0",
+    "esbuild": "0.25.9",
+    "typescript": "~5.9.2",
     "valibot": "^1.1.0",
-    "vitest": "^3.1.3"
+    "vitest": "^3.2.4"
   },
   "exports": {
     ".": {
@@ -47,5 +47,5 @@
   },
   "type": "module",
   "types": "./distributions/types/index.d.ts",
-  "version": "0.1.22"
+  "version": "0.1.23-alpha+0"
 }
