--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -47,5 +47,5 @@
   },
   "type": "module",
   "types": "./distributions/types/index.d.ts",
-  "version": "0.1.26"
+  "version": "0.1.27-alpha+0"
 }
